Implicitly importing SimpleIO.